dashboard and css

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,7 +4,93 @@
     ViewData["Title"] = "Home";
 }
 
-<div class="text-center">
+<html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+            <!--Boxicons-->
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+        <!--MAIN-->
+
+            <div class="head-title">
+                <div>
+                    <h2>Dashboard</h2>
+                    <h3 class="sub-title">Hello, Welcome to Agapay Aid</h3>
+                </div>
+            </div>
+        
+            <div class="container form-container1">
+	            <div class="container form-container-content1">
+                    <h1>Gaya-gaya Fire</h1>
+	            </div>
+
+                <div class="dashcontent">
+                    <div class="boxinfo">
+                        <div class="infoitem">
+                            <i class="bi bi-people"></i>
+                            <div class="text">
+                                <h3 class="dashtitle">1000</h3>
+                                <p><b>Total Evacuees</b></p>
+                                <div class="box-stat">
+                                    <small>Male: <span>450</span></small>
+                                    <small>Female: <span>550</span></small>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="infoitem">
+                            <i class="bi bi-people"></i>
+                            <div class="text">
+                                <h3 class="dashtitle">1000</h3>
+                                <p><b>Total Evacuees</b></p>
+                                <div class="box-stat">
+                                    <small>Male: <span>450</span></small>
+                                    <small>Female: <span>550</span></small>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="infoitem">
+                            <i class="bi bi-people"></i>
+                            <div class="text">
+                                <h3 class="dashtitle">1000</h3>
+                                <p><b>Total Evacuees</b></p>
+                                <div class="box-stat">
+                                    <small>Male: <span>450</span></small>
+                                    <small>Female: <span>550</span></small>
+                                </div>
+                            </div>
+                        </div>
+
+                         <div class="infoitem">
+                            <i class="bi bi-people"></i>
+                            <div class="text">
+                                <h3 class="dashtitle">1000</h3>
+                                <p><b>Total Evacuees</b></p>
+                                <div class="box-stat">
+                                    <small>Male: <span>450</span></small>
+                                    <small>Female: <span>550</span></small>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+     
+    </body>
+</html>
+
+
+
+
+
+
+
+@*<div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+</div>*@
