Inventory edit item page

--- a/Pages/disaster/profile/inventory/Index.cshtml
+++ b/Pages/disaster/profile/inventory/Index.cshtml
@@ -152,7 +152,7 @@
 												</a>
 												<ul class="dropdown-menu" aria-labelledby="recordOptions">
 													<li>
-														<a class="dropdown-item" href="/disaster/profile/inventory/edit?packID=@item.inventoryID&centerLogID=@Model.logInfo.centerLogID">
+														<a class="dropdown-item" href="/disaster/profile/inventory/edit?inventoryID=@item.inventoryID">
 															Edit
 														</a>
 													</li>
