Distribute pack to evacuees page

--- a/Pages/disaster/profile/reliefgoodspack/Index.cshtml
+++ b/Pages/disaster/profile/reliefgoodspack/Index.cshtml
@@ -160,6 +160,11 @@
 												</a>
 												<ul class="dropdown-menu" aria-labelledby="recordOptions">
 													<li>
+														<a class="dropdown-item" href="/disaster/profile/reliefgoodspack/distribute?packID=@item.packID&centerLogID=@Model.logInfo.centerLogID">
+															Distribute to Evacuees
+														</a>
+													</li>
+													<li>
 														<a class="dropdown-item" href="/disaster/profile/reliefgoodspack/view?packID=@item.packID&centerLogID=@Model.logInfo.centerLogID">
 															View Pack Inclusions</a>
 													</li>
