Updated About page

--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -10,7 +10,7 @@
 		<nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
-				<li class="breadcrumb-item active"><a><strong>About AgapayAid</strong></a></li>
+				<li class="breadcrumb-item active"><a><strong>About Agapay Aid</strong></a></li>
 			</ol>
 		</nav>
 	</div>
@@ -18,27 +18,24 @@
 	<!-- Title and Add Button-->
 	<div class="row p-2">
 		<div class="col d-flex align-items-center">
-			<h1>About AgapayAid</h1>
+			<h1>About Agapay Aid</h1>
 		</div>
 	</div>
 
-	<div class="row text-center">
-		<p>AgapayAid is a web-based application designed to revolutionize disaster relief efforts in the Philippines. 
-	</div>
-
-	<div class="row text-justify">
-		<p>Our system's primary objectives are to streamline the management of evacuation centers by optimizing resource allocation, staff assignments, and evacuee registration. Additionally, Agapay Aid aims to enhance the equitable distribution of relief goods while providing real-time data reports to various stakeholders, including evacuation center staff, local government units, and system administrators.</p></p>
-		<p>At Agapay Aid, our mission is to make a difference in disaster response by harnessing the power of technology to save lives, alleviate suffering, and contribute to a safer and more resilient Philippines.</p>
+	<div class="row p-2 text-justify">
+		<p>Agapay Aid is a web-based application that seeks to revolutionize disaster relief efforts in the Philippines.</p>
+		<p>Our system's primary goals include streamlining the management of evacuation centers by optimizing resource allocation, staff assignments, and evacuee registration. Additionally, Agapay Aid aims to improve the equitable distribution of relief goods while offering real-time data reports to various stakeholders, such as evacuation center staff, local government units, and system administrators.</p>
+		<p>At Agapay Aid, our mission is to make a meaningful impact on disaster response by leveraging technology to save lives, alleviate suffering, and contribute to a safer and more resilient Philippines.</p>
 	</div>
 
 	<div class="row">
-		<div class="p-3 col-md-6" style="vertical-align:middle; color: var(--bs-primary-color); background: white; box-shadow:0; border-radius: 20px">
-			<h6>Why?</h6>
+		<div class="p-4 col-md-6" style="vertical-align:middle; color: var(--bs-primary-color); background: white; box-shadow:0; border-radius: 20px">
+			<h5><b>Why?</b></h5>
 			<p class="text-justify">The Department of Social Welfare and Development (DSWD), the Philippines' primary agency for disaster response, underlined in the Joint Memorandum Circular No. 01, Series of 2013, Guidelines on Evacuation Center Coordination and Management (ECCM), that safeguarding the safety and well-being of people, along with their animals, during natural or human-induced disasters is a paramount government priority. Families and communities in high-risk areas must be swiftly relocated to secure locations or evacuation centers in times of peril.</p>
 		</div>
 
-		<div class="p-3 col-md-6" style="vertical-align:middle; color:#fff; background: black; box-shadow:0">
-			<h6 class="text-light">Do you know?</h6>
+		<div class="p-5 col-md-6" style="vertical-align:middle; color:#fff; background: var(--bs-primary-color); box-shadow:0; border-radius: 20px">
+			<h5 class="text-light"><b>Did you know?</b></h5>
 			<p class="text-justify">In 2022, the World Risk Report ranked the Philippines as the most disaster-prone country, primarily due to its high susceptibility to natural calamities such as earthquakes, typhoons, storm surges, tsunamis, volcanic eruptions, and flooding. Amid the COVID-19 pandemic, the Philippines faced the onslaught of 22 tropical storms, resulting in devastating floods and landslides, displacing many Filipinos who sought refuge in evacuation centers.</p>
 		</div>
 	</div>
