--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -85,7 +85,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - AgapayAidSystem - <a asp-area="" asp-page="/privacy">About</a>
+            &copy; 2023 - AgapayAidSystem - <a asp-area="" asp-page="/about">About</a>
         </div>
     </footer>
 
