--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -16,7 +16,7 @@
 
             <div class="head-title">
                 <div>
-                    <h2>Dashboard</h2>
+                    <h2>Home</h2>
                     <h3 class="sub-title">Hello, Welcome to Agapay Aid</h3>
                 </div>
             </div>
@@ -29,13 +29,13 @@
                 <div class="dashcontent">
                     <div class="boxinfo">
                         <div class="infoitem">
-                            <i class="bi bi-people"></i>
+                            <i class="bi bi-person"></i>
                             <div class="text">
-                                <h3 class="dashtitle">1000</h3>
+                                <h3 class="dashtitle">1467</h3>
                                 <p><b>Total Evacuees</b></p>
                                 <div class="box-stat">
-                                    <small>Male: <span>450</span></small>
-                                    <small>Female: <span>550</span></small>
+                                    <small>Male: <span>673</span></small>
+                                    <small>Female: <span>794</span></small>
                                 </div>
                             </div>
                         </div>
@@ -43,36 +43,26 @@
                         <div class="infoitem">
                             <i class="bi bi-people"></i>
                             <div class="text">
-                                <h3 class="dashtitle">1000</h3>
-                                <p><b>Total Evacuees</b></p>
-                                <div class="box-stat">
-                                    <small>Male: <span>450</span></small>
-                                    <small>Female: <span>550</span></small>
-                                </div>
+                                <h3 class="dashtitle">293</h3>
+                                <p><b>Total Families</b></p>
                             </div>
                         </div>
 
                         <div class="infoitem">
-                            <i class="bi bi-people"></i>
+                            <i class="bi bi-building-fill"></i>
                             <div class="text">
-                                <h3 class="dashtitle">1000</h3>
-                                <p><b>Total Evacuees</b></p>
-                                <div class="box-stat">
-                                    <small>Male: <span>450</span></small>
-                                    <small>Female: <span>550</span></small>
-                                </div>
+                                <h3 class="dashtitle">3</h3>
+                                <p><b>Total Active</b></p>
+                                <p><b>Evacuation Centers</b></p>
                             </div>
                         </div>
 
                          <div class="infoitem">
-                            <i class="bi bi-people"></i>
+                            <i class="bi bi-person-check"></i>
                             <div class="text">
-                                <h3 class="dashtitle">1000</h3>
-                                <p><b>Total Evacuees</b></p>
-                                <div class="box-stat">
-                                    <small>Male: <span>450</span></small>
-                                    <small>Female: <span>550</span></small>
-                                </div>
+                                <h3 class="dashtitle">70</h3>
+                                <p><b>Total Assigned</b></p>
+                                <p><b>EC Staff Members</b></p>
                             </div>
                         </div>
 
