--- a/Pages/UserManagement/Index.cshtml
+++ b/Pages/UserManagement/Index.cshtml
@@ -56,15 +56,15 @@
 
     <!-- Title and Add Button-->
     <div class="row p-2">
-        <div class="col d-flex align-items-center">
+        <div class="col-12 d-flex align-items-center justify-content-between">
             <h1><i class="bi bi-person-lines-fill"></i>User Management</h1>
-        </div>
-
-        <div class="col-auto d-flex justify-content-between align-items-center">
             <div class="d-flex justify-content-end align-items-center">
-                <a class="btn btn-primary mb-2" href="/usermanagement/add">
+                <a class="btn btn-primary mb-2 d-none d-sm-inline" href="/usermanagement/add">
                     <i class="bi bi-plus-circle pt" style="padding: 5px;"></i>
                     Add User
+                </a>
+                <a class="btn btn-primary mb-2 d-sm-none" href="/usermanagement/add">
+                    <i class="bi bi-plus-circle pt" style="padding: 5px;"></i>
                 </a>
             </div>
         </div>
