--- a/Pages/Family/Index.cshtml
+++ b/Pages/Family/Index.cshtml
@@ -4,6 +4,7 @@
 
 	ViewData["Title"] = "Family";
 }
+
 <!-- Alert Banners -->
 @if (!string.IsNullOrEmpty(Request.Query["successMessage"]))
 {
@@ -77,7 +78,7 @@
 		<div class="col-auto d-flex justify-content-between align-items-center">
 			<div class="d-flex justify-content-end align-items-center">
 				<a class="btn btn-primary mb-2 button-spacing" href="/family">
-					<ion-icon name="download-outline"></ion-icon> Import .CSV File
+					<i class="bi bi-box-arrow-down"></i> Import .CSV File
 				</a>
 				<a class="btn btn-primary mb-2" href="/family/profile/add/index">
 					<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Family
