Lots of changes

--- a/Pages/Disaster/Profile/Index.cshtml
+++ b/Pages/Disaster/Profile/Index.cshtml
@@ -196,10 +196,24 @@
                             <td width="15%" style="text-align: center;">@item.occupancy/@item.maxCapacity</td>
                             <td width="20%">@item.openingDateTime</td>
                             <td width="20%">@item.closingDateTime</td>
-                            <td width="10%">
-                                <a class="btn btn-success edit-button" href="/disaster/profile/informationboard/index?centerLogID=@item.centerLogID">
-                                    View
-                                </a>
+                            <td width="5%">
+                                <div class="d-inline position-relative">
+                                    <a href="#" role="button" id="recordOptions" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <i class="bi bi-three-dots-vertical"></i>
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="recordOptions">
+                                        <li>
+                                            <a class="dropdown-item" href="/disaster/profile/informationboard/index?centerLogID=@item.centerLogID">
+                                                View Profile
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="dropdown-item text-danger">
+                                               Close EC
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </td>
                         </tr>
                         counter++;
