--- a/Pages/Disaster/Profile/informationboard/Index.cshtml
+++ b/Pages/Disaster/Profile/informationboard/Index.cshtml
@@ -84,7 +84,7 @@
 
                         <hr />
 
-                        <p class="p-2">Assigned Staffs
+                        <p class="p-2">Assigned Staff
                             <span class="badge rounded-pill bg-primary pb-1">3</span>
                         </p>
                         <table class="table">
