--- a/Pages/Disaster/Profile/entrylog/Index.cshtml
+++ b/Pages/Disaster/Profile/entrylog/Index.cshtml
@@ -108,7 +108,7 @@
 					<input type="hidden" name="centerLogID" value="@Model.logInfo.centerLogID" />
 					<!-- Title, Check-In and Check-Out Buttons -->
 					<div class="row pb-2">
-						<div class="col-12 d-flex justify-content-between align-items-center" style="gap: 5px">
+						<div class="col-12 d-flex justify-content-between align-items-center" style="gap: 30px">
 							<div class="d-flex align-items-center">
 								<h1>Entry Log</h1>
 							</div>
@@ -118,7 +118,7 @@
 									<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Check-in Evacuee
 								</a>
 								<button style="display: none;" type="button" class="btn btn-danger mb-2" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>
-									Check-out Evacuee
+									<i class="bi bi-x-circle pt" style="padding: 5px;"></i> Check-out Evacuee
 								</button>
 							</div>
 						</div>
