--- a/Pages/EvacuationCenter/Index.cshtml
+++ b/Pages/EvacuationCenter/Index.cshtml
@@ -56,15 +56,16 @@
 	
 	<!-- Title and Add Button-->
 	<div class="row p-2">
-		<div class="col d-flex align-items-center">
+		<div class="col-12 d-flex align-items-center justify-content-between">
 			<h1><i class="bi bi-building-fill"></i>Evacuation Center</h1>
-		</div>
 
-		<div class="col-auto d-flex justify-content-between align-items-center">
 			<div class="d-flex justify-content-end align-items-center">
-				<a class="btn btn-primary mb-2" href="/evacuationcenter/add">
+				<a class="btn btn-primary mb-2 d-none d-sm-inline" href="/evacuationcenter/add">
 					<i class="bi bi-plus-circle pt" style="padding: 5px;"></i>
 					Add Evacuation Center
+				</a>
+				<a class="btn btn-primary mb-2 d-sm-none" href="/evacuationcenter/add">
+					<i class="bi bi-plus-circle pt" style="padding: 5px;"></i>
 				</a>
 			</div>
 		</div>
