--- a/Pages/Family/Index.cshtml
+++ b/Pages/Family/Index.cshtml
@@ -70,17 +70,22 @@
 
 	<!-- Title and Add Button -->
 	<div class="row p-2">
-		<div class="col d-flex align-items-center">
+		<div class="col-12 d-flex align-items-center justify-content-between">
 			<h1><i class="bi bi-people-fill"></i>Family</h1>
-		</div>
-
-		<div class="col-auto d-flex justify-content-between align-items-center">
 			<div class="d-flex justify-content-end align-items-center">
-				<a class="btn btn-primary mb-2 button-spacing" href="/family">
-					<ion-icon name="download-outline"></ion-icon> Import .CSV File
+				<a class="btn btn-primary mb-2 button-spacing d-none d-sm-inline" href="/family">
+					<ion-icon name="download-outline"></ion-icon>
+					Import .CSV File
 				</a>
-				<a class="btn btn-primary mb-2" href="/family/profile/add/index">
+				<a class="btn btn-primary mb-2 d-none d-sm-inline" href="/family/profile/add/index">
 					<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Family
+				</a>
+
+				<a class="btn btn-primary mb-2 button-spacing d-sm-none" href="/family">
+					.CSV <!-- put import icon here -->
+				</a>
+				<a class="btn btn-primary mb-2 d-sm-none" href="/family/profile/add/index">
+					<i class="bi bi-plus-circle pt" style="padding: 5px;"></i>
 				</a>
 			</div>
 		</div>
