--- a/Pages/UserManagement/Index.cshtml
+++ b/Pages/UserManagement/Index.cshtml
@@ -58,6 +58,7 @@
     <div class="row p-2">
         <div class="col-12 d-flex align-items-center justify-content-between">
             <h1><i class="bi bi-person-lines-fill"></i>User Management</h1>
+            
             <div class="d-flex justify-content-end align-items-center">
                 <a class="btn btn-primary mb-2 d-none d-sm-inline" href="/usermanagement/add">
                     <i class="bi bi-plus-circle pt" style="padding: 5px;"></i>
@@ -87,7 +88,7 @@
                     @{ var counter = 1; }
                     @foreach (var item in Model.listUsers)
                     {
-                        <tr>
+                        <tr style="text-align: center;">
                             <td width="5%">@counter</td>
                             <td>@item.username</td>
                             <td>@item.userType</td>
