--- a/Pages/disaster/profile/reliefdistribution/Index.cshtml
+++ b/Pages/disaster/profile/reliefdistribution/Index.cshtml
@@ -104,24 +104,18 @@
 					</nav>
 				</div>
 
-				<form method="POST" id="checkOut" style="padding: 0px;">
-					<input type="hidden" name="centerLogID" value="@Model.logInfo.centerLogID" />
-					<!-- Title, Check-In and Check-Out Buttons -->
-					<div class="row pb-2">
-						<div class="col-12 d-flex justify-content-between align-items-center" style="gap: 5px">
-							<div class="d-flex align-items-center">
-								<h1>Relief Distribution</h1>
-							</div>
-
-							<div class="d-flex justify-content-between align-items-center">
-								<a id="checkInButton" class="btn btn-primary mb-2" href="/disaster/profile/reliefdistribution/add?centerLogID=@Model.logInfo.centerLogID">
-									<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add
-								</a>
-							</div>
+				<!-- Title -->
+				<div class="row pb-2">
+					<div class="col-12 d-flex justify-content-between align-items-center" style="gap: 5px">
+						<div class="d-flex align-items-center">
+							<h1>Relief Distribution</h1>
 						</div>
-					</div>
 
-					<!-- Table -->
+					</div>
+				</div>
+
+				<!-- Table -->
+				<div class="row pb-2">
 					<div class="col-lg-12">
 						<table id="distribution-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
 							<thead>
@@ -175,7 +169,7 @@
 							</tbody>
 						</table>
 					</div>
-				</form>
+				</div>
 			</div>
 		</div>
 	</div>
