--- a/Pages/disaster/profile/staffassignment/Index.cshtml
+++ b/Pages/disaster/profile/staffassignment/Index.cshtml
@@ -117,7 +117,7 @@
 								<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Assign Staff
 							</a>
 							<button style="display: none;" type="button" class="btn btn-danger mb-2" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>
-								Mark Completed
+								<i class="bi bi-check-circle pt" style="padding: 5px;"></i> Mark Completed
 							</button>
 						</div>
 					</div>
@@ -268,10 +268,7 @@
 				{ "orderable": true, "targets": [1, 3, 4] }, // Sortable columns
 				{ "orderable": false, "targets": [0, 2, 5, 6] } // Non-sortable columns
 			],
-			order: [ [3, 'desc']], // Initial sorting by Assigned Date
-			language: {
-				emptyTable: "There are no staff members assigned at this evacuation center.",
-			}
+			order: [[3, 'desc'], [1, 'asc']] // Initial sorting by Assigned Date
 		});
 
 		// Adding filters to specific columns
