--- a/Pages/Family/Profile/Add/Index.cshtml
+++ b/Pages/Family/Profile/Add/Index.cshtml
@@ -97,7 +97,7 @@
 				</div>
 
 				<div class="row mt-3">
-					<!-- living in GIDA -->
+					@*<!-- living in GIDA -->
 					<div class="col-md-6 living-in-gida">
 						<div class="mb-3">
 							<label class="form-label radio1x2">
@@ -107,7 +107,8 @@
 								<span class="text-danger" style="padding: 5px">*</span>
 							</label>
 							<div class="form-check radio1x2">
-								<input class="form-check-input" type="radio" name="livingInGida" id="Yes" value="Yes" @if (Model.familyInfo.livingInGida == "Yes")
+								<input class="form-check-input" type="radio" name="livingInGida" id="Yes" value="Yes" 
+								@if (Model.familyInfo.livingInGida == "Yes")
 								{
 									<text>checked</text>
 								}>
@@ -116,7 +117,8 @@
 								</label>
 							</div>
 							<div class="form-check radio1x2">
-								<input class="form-check-input" type="radio" name="livingInGida" id="No" value="No" @if (Model.familyInfo.livingInGida == "No")
+								<input class="form-check-input" type="radio" name="livingInGida" id="No" value="No" 
+								@if (Model.familyInfo.livingInGida == "No")
 								{
 									<text>checked</text>
 								}>
@@ -125,7 +127,7 @@
 								</label>
 							</div>
 						</div>
-					</div>
+					</div>*@
 
 					<!-- beneficiary -->
 					<div class="col-md-6">
